--- a/index.html
+++ b/index.html
@@ -230,25 +230,25 @@
           <div class="row">
             <!--Obra 1-->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-              <img src="./images/os-retirantes (2).jpg" class=" miniatura img-fluid" alt="Ilustração de um hotel">
+              <img src="./images/os-retirantes (2).jpg" class=" miniatura img-fluid" alt="Quadro Os Retirantes">
               <h5 class="py-2 text-dark">Os Retirantes</h5>
               <p class="text-muted">Candido Portinari, 1944</p>
             </div>
             <!--Obra 2-->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-              <img src="./images/o-escolar.jpg" class=" miniatura img-fluid" alt="Ilustração de um resort">
+              <img src="./images/o-escolar.jpg" class=" miniatura img-fluid" alt="Quadro O Escolar">
               <h5 class="py-2 text-dark">O Escolar</h5>
               <p class="text-muted">Vincent van Gogh, 1888</p>
             </div>
             <!--Obra 3-->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-              <img src="./images/retrato-de-suzanne-bloch.jpg" class=" miniatura img-fluid" alt="Ilustração de um flat">
+              <img src="./images/retrato-de-suzanne-bloch.jpg" class=" miniatura img-fluid" alt="Quadro Retrato de Suzanne Bloch">
               <h5 class=" py-2 text-dark">Retrato de Suzanne Bloch</h5>
               <p class="text-muted">Pablo Picasso, 1904</p>
             </div>
             <!---Obra 4-->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-              <img src="./images/a-canoa-sobre-o-epte.jpg" class=" miniatura img-fluid" alt="Ilustração de uma casa">
+              <img src="./images/a-canoa-sobre-o-epte.jpg" class=" miniatura img-fluid" alt="A Canoa Sobre Epte">
               <h5 class=" py-2 text-dark">A Canoa Sobre o Epte</h5>
               <p class="text-muted">Claude Monet, 1890</p>
             </div>
